--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " node  server.js",
-    "start:model": "py model_api/model_api.py",
-    "dev": "concurrently \"nodemon server.js\" \"npm run start:model\""
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +18,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.4.0",
-    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "nodemailer": "^6.10.1",
-    "tmp": "^0.2.1"
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
